<?xml version="1.0" encoding="utf-8" standalone="no"?>
<resources>

    <string name="app_name">Living</string>
    <string name="action_settings">Settings</string>
    <string name="login_username_hint">UserName</string>
    <string name="login_password_hint">PassWord</string>
    <string name="login_email_hint">请在此输入密码…</string>
    <string name="login">Sign In</string>
    <string name="register">Sign Up</string>
    <string name="register_e">Sign Up</string>
    <string name="register_txt1">New here? Sign Up</string>
    <string name="login_account">账号 </string>
    <string name="login_pwd">密码 </string>
    <string name="login_email">确认密码 </string>
    <string name="network_tips">当前网络不可用,请检查您的网络!</string>
    <string name="toast_error_password_null">密码不能为空</string>
    <string name="toast_error_username_null">用户名不能为空</string>
    <string name="toast_error_comfirm_password">输入的两次密码不一致</string>
    <string name="username">用户名</string>
    <string name="log_out">退出登录</string>
    <string name="title_activity_daily">DailyActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_classify">ClassifyActivity</string>
    <string name="title_activity_assortment">AssortmentActivity</string>
    <string name="title_activity_house_detail">HouseDetailActivity</string>
    <string name="title_activity_assortment_list">AssortmentListActivity</string>

</resources>