<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bj2"
    android:orientation="vertical" >

    <ImageView
        android:id="@+id/iv_icon"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="55dp"
        android:contentDescription="@string/login"
        android:src="@drawable/lft4" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginTop="60dp"
        android:background="@drawable/shuruk"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:paddingLeft="10dp"
            android:text="@string/login_account"
            android:textColor="#ffdddddd"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/et_username"
            style="@style/Register_Edit"
            android:textCursorDrawable="@null"
            android:hint="@string/login_username_hint"
            android:textColor="#ffdddddd" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/shuruk"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:paddingLeft="10dp"
            android:text="@string/login_pwd"
            android:textColor="#ffdddddd"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/et_password"
            style="@style/Register_Edit"
            android:hint="@string/login_password_hint"
            android:inputType="textPassword"
            android:textCursorDrawable="@null"
            android:textColor="#ffdddddd" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/shuruk"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:paddingLeft="10dp"
            android:text="@string/login_email"
            android:textColor="#ffdddddd"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/et_pwd_again"
            style="@style/Register_Edit"
            android:hint="@string/login_password_hint"
            android:inputType="textPassword"
            android:textCursorDrawable="@null"
            android:textColor="#ffdddddd" />
    </LinearLayout>

    <Button
        android:id="@+id/btn_register"
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="70dp"
        android:layout_marginRight="70dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/qd"
        android:text="@string/register_e"
        android:textColor="#ffffff"
        android:textSize="18sp" />

</LinearLayout>